WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165872
REGRESSION (204679): Google notifications never load (expecting DOMStringList rather than JS array for Location.ancestorOrigins)
https://bugs.webkit.org/show_bug.cgi?id=165872
Summary
REGRESSION (204679): Google notifications never load (expecting DOMStringList...
Sam Weinig
Reported
2016-12-14 14:42:53 PST
REGRESSION (204679): Google notifications never load (expecting DOMStringList rather than JS array for Location.ancestorOrigins)
Attachments
Patch
(6.77 KB, patch)
2016-12-14 14:48 PST
,
Sam Weinig
cdumez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2016-12-14 14:44:29 PST
Chris file
https://github.com/whatwg/html/issues/2179
to track this on the spec side. Since Chrome is still returning a DOMStringList, and this is breaking the front page of Google, we should revert the Location.ancestorOrigins change from
r204679
.
Sam Weinig
Comment 2
2016-12-14 14:44:44 PST
<
rdar://problem/29573563
>
Sam Weinig
Comment 3
2016-12-14 14:48:21 PST
Created
attachment 297128
[details]
Patch
Chris Dumez
Comment 4
2016-12-14 15:07:21 PST
Comment on
attachment 297128
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=297128&action=review
r=me
> Source/WebCore/page/Location.idl:61 > + // FIXME: This should return a FixedArray<DOMString> and should use SameObject.
FixedArray? Did you mean FrozenArray? I believe the spec will be reverted to DOMStringList as per comment on the spec bug so we may not need to update this comment at all.
Sam Weinig
Comment 5
2016-12-14 16:04:36 PST
Committed
r209841
: <
http://trac.webkit.org/changeset/209841
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug