Source/WebCore/page/Location.cpp
@@ -131,13 +131,13 @@ String Location::origin() const
     return SecurityOrigin::create(url())->toString();
 }
 
-Vector<String> Location::ancestorOrigins() const
+Ref<DOMStringList> Location::ancestorOrigins() const
 {
-    Vector<String> origins;
+    auto origins = DOMStringList::create();
     if (!m_frame)
         return origins;
     for (Frame* frame = m_frame->tree().parent(); frame; frame = frame->tree().parent())
-        origins.append(frame->document()->securityOrigin()->toString());
+        origins->append(frame->document()->securityOrigin()->toString());
     return origins;
 }
 
